--- a/CopyHelper.csproj
+++ b/CopyHelper.csproj
@@ -9,11 +9,33 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="CLIP\clip_image_encoder.onnx" />
+    <None Remove="CLIP\clip_text_encoder.onnx" />
+    <None Remove="CLIP\tokenizer.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="CLIP\clip_image_encoder.onnx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="CLIP\clip_text_encoder.onnx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="CLIP\tokenizer.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+
+    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.20.1" />
     <PackageReference Include="Microsoft.Windows.SDK.NET" Version="10.0.18362.6-preview" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageReference Include="OpenCvSharp4" Version="4.11.0.20250507" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.11.0.20250507" />
+    <PackageReference Include="PDFiumSharp.NativeBinaries" Version="1.4660.0" />
+    <PackageReference Include="PDFiumSharpV2" Version="1.1.4" />
     <PackageReference Include="PdfPig" Version="0.1.13" />
     <PackageReference Include="System.Drawing.Common" Version="10.0.1" />
   </ItemGroup>
