--- a/CopyHelper.csproj
+++ b/CopyHelper.csproj
@@ -34,8 +34,8 @@
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageReference Include="OpenCvSharp4" Version="4.11.0.20250507" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.11.0.20250507" />
-    <PackageReference Include="PDFiumSharp.NativeBinaries" Version="1.4660.0" />
-    <PackageReference Include="PDFiumSharpV2" Version="1.1.4" />
+    <PackageReference Include="PdfiumViewer" Version="2.13.0" />
+    <PackageReference Include="PdfiumViewer.Native.x86_64.v8-xfa" Version="2018.4.8.256" />
     <PackageReference Include="PdfPig" Version="0.1.13" />
     <PackageReference Include="System.Drawing.Common" Version="10.0.1" />
   </ItemGroup>
